src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&family=Work+Sans:wght@500&display=swap");

:root {
  --lose: #cc5803;
  --win: #a0ca92;
  --bomb: #1f1300;
  --hidden: #4a6d7c;
  --shown: #78a1bb;
  --disabled: rgb(68, 68, 68);
  --font: "Work Sans", sans-serif;
}

.util-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* containers */
.App {
  background-color: var(--disabled);
  flex-direction: column;
  min-width: 600px;
  height: 100vh;
  color: white;
}

.header,
.main-container {
  text-transform: uppercase;
  letter-spacing: 1em;
  font-family: var(--font);
  text-align: center;
}

.main-container {
  align-items: stretch;
}

.header {
  font-size: 24px;
  font-weight: bold;
  width: 610px;
  flex-direction: column;
}

.header-item,
.stop,
.count {
  height: 50px;
}

/* game settings */
.game-settings {
  display: flex;
  flex-direction: column;
}

.stop {
  color: white;
}

.count {
  color: var(--lose);
}

.lost {
  color: var(--lose);
}

.won {
  color: var(--win);
}

.start,
.disabled,
.reset {
  letter-spacing: 2em;
  writing-mode: vertical-rl;
  text-orientation: upright;
  padding: 10px;
}

.start:hover,
.reset:hover {
  cursor: pointer;
  background-color: var(--win);
}

.disabled {
  cursor: default;
  background-color: var(--disabled);
}

/* general board */
.board-container {
  border-width: 10px;
  border-style: solid;
  background-color: white;
  width: 510px;
  height: 510px;
  flex-wrap: wrap;
}

/* squares */
.bomb,
.square-visible,
.square-hidden {
  margin: auto;
  letter-spacing: 0;
  font-size: 20px;
  width: auto;
  height: auto;
}
.square-visible {
  background-color: var(--shown);
  cursor: default !important;
}
.square-hidden {
  background-color: var(--hidden);
}
.square-hidden:hover {
  cursor: pointer;
}
.bomb {
  background-color: var(--lose);
}

